--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ form{
   border: none;
   border-radius: 8px;
   color: #fff;
+  cursor: pointer;
 }
 
 .images-field{
@@ -65,6 +66,7 @@ form{
   border: none;
   border-radius: 8px;
   color: #fff;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1200px) {
